updated folder structure

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -111,9 +111,18 @@
                       <p class="card-text flex-grow-1">
                         Presidential Decree No. 1067, or the Water Code of the Philippines, declares all waters state-owned and regulates their use, conservation, and protection through the NWRB.
                       </p>
-                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                      <div class="d-flex gap-2 mt-auto">
+                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" 
+                          target="_blank" 
+                          class="btn btn-outline-light btn-sm btn-3d">
+                          View PDF
+                        </a>
+                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" 
+                          download 
+                          class="btn btn-outline-light btn-sm btn-3d">
                           Download PDF
                         </a>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -128,9 +137,18 @@
                       <p class="card-text flex-grow-1">
                         NWRB Resolution No. 001-0904 designates Metro Manila as a critical water area to ensure stricter regulation, conservation, and sustainable management of its water resources.
                       </p>
-                        <a href="./files/NWRB Resolution No. 001-0904.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                      <div class="d-flex gap-2 mt-auto">
+                        <a href="./files/NWRB Resolution No. 001-0904.pdf" 
+                          target="_blank" 
+                          class="btn btn-outline-light btn-sm btn-3d">
+                          View PDF
+                        </a>
+                        <a href="./files/NWRB Resolution No. 001-0904.pdf" 
+                          download 
+                          class="btn btn-outline-light btn-sm btn-3d">
                           Download PDF
                         </a>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -145,9 +163,18 @@
                       <p class="card-text flex-grow-1">
                         NWRB Resolution No. 15-1116 authorizes DENR Regional Offices to assist in enforcing water use regulations by deputizing them for specific regulatory functions.
                       </p>
-                        <a href="./files/NWRB_15-1116 - Deputation of DENR Regional Offices on Certain Functions of Water Use Regulation.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                      <div class="d-flex gap-2 mt-auto">
+                        <a href="./files/NWRB_15-1116 - Deputation of DENR Regional Offices on Certain Functions of Water Use Regulation.pdf" 
+                          target="_blank" 
+                          class="btn btn-outline-light btn-sm btn-3d">
+                          View PDF
+                        </a>
+                        <a href="./files/NWRB_15-1116 - Deputation of DENR Regional Offices on Certain Functions of Water Use Regulation.pdf" 
+                          download 
+                          class="btn btn-outline-light btn-sm btn-3d">
                           Download PDF
                         </a>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -162,86 +189,96 @@
                       <p class="card-text flex-grow-1">
                         Executive Order No. 22 establishes the Water Resources Management Office (WRMO) within the DENR to coordinate, integrate, and oversee the sustainable management of the country’s water resources.
                       </p>
-                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" download class="btn btn-3d btn-light btn-sm mt-auto">
+                      <div class="d-flex gap-2 mt-auto">
+                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" 
+                          target="_blank" 
+                          class="btn btn-outline-light btn-sm btn-3d">
+                          View PDF
+                        </a>
+                        <a href="./files/EO 22 - CREATING THE WATER RESOURCES MANAGEMENT OFFICE IN THE DENR.pdf" 
+                          download 
+                          class="btn btn-outline-light btn-sm btn-3d">
                           Download PDF
                         </a>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Database Tab -->
-      <div class="tab-pane fade" id="summaryTab" role="tabpanel" aria-labelledby="summary-tab">
-        <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1">
+        <!-- Database Tab -->
+        <div class="tab-pane fade" id="summaryTab" role="tabpanel" aria-labelledby="summary-tab">
+          <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1">
 
-          <!-- Inner Tabs -->
-          <ul class="nav nav-tabs mb-3" id="summaryInnerTabs" role="tablist">
-            <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="permit-summary-tab" data-bs-toggle="tab" data-bs-target="#permitSummary" type="button" role="tab" aria-controls="permitSummary" aria-selected="true">
-                Water Permit
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button class="nav-link" id="city-accom-tab" data-bs-toggle="tab" data-bs-target="#cityAccomplishment" type="button" role="tab" aria-controls="cityAccomplishment" aria-selected="false">
-                Water Users and Sources
-              </button>
-            </li>
-          </ul>
+            <!-- Inner Tabs -->
+            <ul class="nav nav-tabs mb-3" id="summaryInnerTabs" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="permit-summary-tab" data-bs-toggle="tab" data-bs-target="#permitSummary" type="button" role="tab" aria-controls="permitSummary" aria-selected="true">
+                  Water Permit
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="city-accom-tab" data-bs-toggle="tab" data-bs-target="#cityAccomplishment" type="button" role="tab" aria-controls="cityAccomplishment" aria-selected="false">
+                  Water Users and Sources
+                </button>
+              </li>
+            </ul>
 
-          <!-- Inner Tab Content -->
-          <div class="tab-content w-100" id="summaryInnerTabsContent">
+            <!-- Inner Tab Content -->
+            <div class="tab-content w-100" id="summaryInnerTabsContent">
 
-            <!-- Permit Summary Tab Pane -->
-            <div class="tab-pane fade show active" id="permitSummary" role="tabpanel" aria-labelledby="permit-summary-tab">
-              <div class="city-table-wrapper text-center my-4">
-                <div class="table-responsive d-flex justify-content-center">
-                  <div class="table-container">
-                    <div id="cityPermitTable" class="mb-4"></div>
+              <!-- Permit Summary Tab Pane -->
+              <div class="tab-pane fade show active" id="permitSummary" role="tabpanel" aria-labelledby="permit-summary-tab">
+                <div class="city-table-wrapper text-center my-4">
+                  <div class="table-responsive d-flex justify-content-center">
+                    <div class="table-container">
+                      <div id="cityPermitTable" class="mb-4"></div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <!-- Accomplishment Per City Tab Pane -->
-            <div class="tab-pane fade" id="cityAccomplishment" role="tabpanel" aria-labelledby="city-accom-tab">
-              <div class="city-table-wrapper text-center my-4">
-                <div class="table-responsive d-flex justify-content-center">
-                  <div class="table-container">
-                    <div id="cityAccomplishmentTable" class="my-4 w-100"></div>
+              <!-- Accomplishment Per City Tab Pane -->
+              <div class="tab-pane fade" id="cityAccomplishment" role="tabpanel" aria-labelledby="city-accom-tab">
+                <div class="city-table-wrapper text-center my-4">
+                  <div class="table-responsive d-flex justify-content-center">
+                    <div class="table-container">
+                      <div id="cityAccomplishmentTable" class="my-4 w-100"></div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Account Settings Tab -->
-      <div class="tab-pane fade" id="settingsTab" role="tabpanel" aria-labelledby="settings-tab">
-        <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1 w-100">
-          <h3>Account Settings</h3>
-          <p class="text-muted">Change your password below.</p>
+        <!-- Account Settings Tab -->
+        <div class="tab-pane fade" id="settingsTab" role="tabpanel" aria-labelledby="settings-tab">
+          <div class="profile-banner d-flex flex-column align-items-start p-2 rounded shadow-sm mb-1 w-100">
+            <h3>Account Settings</h3>
+            <p class="text-muted">Change your password below.</p>
 
-          <div class="card shadow-sm water-card p-4 mt-4">
-            <div class="text-center">
-              <i class="fas fa-cog gear-icon"></i>
-              <h5 class="text-water mb-3">Change Password</h5>
+            <div class="card shadow-sm water-card p-4 mt-4">
+              <div class="text-center">
+                <i class="fas fa-cog gear-icon"></i>
+                <h5 class="text-water mb-3">Change Password</h5>
+              </div>
+              <form id="changePasswordForm">
+                <div class="mb-3">
+                  <label for="newPassword" class="form-label text-muted">New Password</label>
+                  <input type="password" class="form-control form-water" id="newPassword" required minlength="6" />
+                </div>
+                <div class="mb-3 text-muted">
+                  <label for="confirmPassword" class="form-label">Confirm Password</label>
+                  <input type="password" class="form-control form-water" id="confirmPassword" required minlength="6" />
+                </div>
+                <button type="submit" class="btn btn-water w-100">Update Password</button>
+              </form>
             </div>
-            <form id="changePasswordForm">
-              <div class="mb-3">
-                <label for="newPassword" class="form-label">New Password</label>
-                <input type="password" class="form-control form-water" id="newPassword" required minlength="6" />
-              </div>
-              <div class="mb-3">
-                <label for="confirmPassword" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control form-water" id="confirmPassword" required minlength="6" />
-              </div>
-              <button type="submit" class="btn btn-water w-100">Update Password</button>
-            </form>
           </div>
         </div>
       </div>
@@ -319,7 +356,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script type="module" src="./js/dashboard/dashboard-init.js"></script>
 </body>
 </html>
