--- a/public/map.html
+++ b/public/map.html
@@ -18,7 +18,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-2" id="page-content">
-        <h2><i class="bi bi-map"></i> Map Generator</h2>
+        <h2><i class="bi bi-map"></i> Map Routing</h2>
         <div id="map" style="height: 500px;"></div>
     </div>
   </div>
@@ -31,7 +31,7 @@
   <script src="https://rawgit.com/rowanwins/leaflet-easyPrint/gh-pages/dist/bundle.js"></script>
 
   <script type="module" src="js/map/leaflet-main.js"></script>
-  <script type="module" src="js/map/map-init.js"></script>
+  <script type="module" src="js/map/routing-page-init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
