initialize map routing page

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dashboard.css">
-  <link rel="stylesheet" href="css/dashboard-map.css">
+  <link rel="stylesheet" href="css/map.css">
   <link rel="stylesheet" href="css/component/bubble.css">
 </head>
 <body>
@@ -284,21 +284,6 @@
       </div>
     </div>
   </div>
-  <!-- Announcement Modal -->
-  <div class="modal fade water-modal" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content water-modal-content">
-        <div class="modal-header water-modal-header">
-          <h5 class="modal-title" id="announcementModalLabel">Announcement</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body water-modal-body">
-          <p id="announcementMessage">Default message</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Barangay Modal -->
   <div class="modal fade" id="barangayModal" tabindex="-1" aria-labelledby="barangayModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
