--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Portal</title>
+  <title>WRUS Information System</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -52,7 +52,9 @@
             <div class="container-fluid simple-water-jumbotron mt-4">
               <div class="p-0 mb-4 rounded-3 shadow-sm">
                 <div class="container-fluid py-5">
-                   <img src="./images/denr logo.png" alt="DENR Logo" class="denr-logo mb-3">
+                  <div class="logo-container">
+                    <img src="./images/denr logo.png" alt="DENR Logo" class="denr-logo mb-3">
+                  </div>
                   <h1 class="display-5 fw-bold">
                     Water Resources and Utilization Section - National Capital Region
                   </h1>
