--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/map.css">
-  <link rel="stylesheet" href="css/component/bubble.css">
+  <link rel="stylesheet" href="css/component/rain.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
