created delete entry and clear all

--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -57,6 +57,9 @@
         </div>
 
         <div class="text-center mt-3">
+          <button id="clearBtn" class="btn btn-3d btn-danger w-50 mb-4">
+          Clear All
+          </button>
           <button id="finalizeButton" class="btn btn-3d btn-success w-50">
           Finalize Entry
           </button>
