--- a/public/consumable.html
+++ b/public/consumable.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
@@ -18,12 +18,12 @@
     <!-- Page Content -->
     <div class="container-fluid p-2" id="page-content">
 
-      <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-2 gap-2 mb-2">
-        <h2 class="mb-2 mb-md-0">
-          <i class="bi bi-box-seam me-2"></i> Items
-        </h2>
+      <div class="mb-2">
+        <h2 class="file-tab-heading">Items</h2>
+      </div>
 
-        <div class="d-flex flex-column flex-sm-row justify-content-end align-items-stretch gap-2 w-100 w-md-auto">
+      <!-- 🔍 Search Bar + Add Button Row -->
+      <div class="d-flex flex-column flex-sm-row justify-content-end align-items-stretch gap-2 mb-3">
         <div class="input-group water-theme" style="min-width: 250px;">
           <span class="input-group-text bg-info text-dark border-0">🔍</span>
           <input
@@ -33,12 +33,10 @@
             placeholder="Search for consumable items..."
           />
         </div>
-          <button id="showAddFormBtn" class="btn btn-3d btn-primary" style="white-space: nowrap;">
-            <i class="bi bi-plus-circle me-1"></i> Add
-          </button>
-        </div>
+        <button id="showAddFormBtn" class="btn btn-3d btn-primary" style="white-space: nowrap;">
+          <i class="bi bi-plus-circle me-1"></i> Add
+        </button>
       </div>
-
       
       <div class="d-flex align-items-center justify-content-between gap-2 my-2 flex-wrap">
         <!-- Left: Page size selector -->
