--- a/public/ics.html
+++ b/public/ics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -19,8 +19,7 @@
     <div class="container-fluid p-2" id="page-content">
 
       <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between flex-wrap gap-2 mb-4">
-        <h2 class="mb-2 mb-md-0 d-flex align-items-center">
-          <i class="bi bi-tools me-2"></i> Equipment
+        <h2 class="file-tab-heading">ICS / PAR
         </h2>
 
         <div class="d-flex flex-column flex-sm-row align-items-stretch justify-content-end gap-2 w-100 w-md-auto">
