--- a/public/inventory-summary.html
+++ b/public/inventory-summary.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -22,7 +22,7 @@
     <div class="container-fluid p-2" id="page-content">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="mb-0"><i class="bi bi-card-list me-2"></i>Inventory Summary</h2>
+      <h2 class="file-tab-heading">Inventory Summary</h2>
       <input
         type="text"
         id="searchInput"
