--- a/public/map.html
+++ b/public/map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -21,7 +21,10 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-2" id="page-content">
-      <h2 class="mb-0 h5 h2-sm"><i class="bi bi-geo-alt"></i> Map Routes</h2>
+      <h2 class="file-tab-heading mb-2"> Map Routes</h2>
+      <div id="routeIndicator" class="route-indicator text-center my-3">
+      🗺 <span id="routeHeading">No destination selected yet</span>
+    </div>
       
       <div class="map-container">
         <!-- Map -->
@@ -33,7 +36,7 @@
           <input type="hidden" id="endLng">
           <div class="mb-2">
             <label for="startLocation" class="form-label small mb-1">Starting Location</label>
-            <input type="text" class="form-control form-control-sm" id="startLocation" placeholder="Enter start point">
+            <input type="text" class="form-control form-control-sm" id="startLocation" placeholder="Enter start point" disabled>
           </div>
           <div class="mb-2 position-relative">
             <label for="endLocation" class="form-label small mb-1">End Location <small><i>(i.e., Permit No.)</i></small></label>
@@ -46,6 +49,8 @@
         </form>
       </div>
 
+      <button id="stopTrackingBtn" class="btn btn-danger mt-2">🛑 Stop Tracking</button>
+
     </div>
   </div>
 
@@ -54,6 +59,7 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <script src="https://unpkg.com/leaflet.marker.slideto@0.3.0/Leaflet.Marker.SlideTo.js"></script>
 
   <script type="module" src="./js/map/routing-page-init.js"></script>
 </body>
