--- a/public/permit.html
+++ b/public/permit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -17,8 +17,7 @@
     <div class="container-fluid p-2" id="page-content">
       <!-- Heading -->
       <div class="mb-2">
-        <h2 class="mb-0 h5 h2-sm">
-          <i class="bi bi-file-earmark-text d-none d-sm-inline"></i> Water Permit
+        <h2 class="file-tab-heading">Water Permit
         </h2>
       </div>
 
