--- a/public/user-management.html
+++ b/public/user-management.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -21,7 +21,7 @@
 
       <div class="mb-4">
         <!-- Header at the top -->
-        <h2 class="h4 mb-3">User Management</h2>
+        <h2 class="file-tab-heading">User Management</h2>
 
         <!-- Search bar and Add button inline -->
         <div class="d-flex flex-column flex-sm-row align-items-stretch gap-2">
