--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -15,8 +15,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-2" id="page-content">
-      <h2 class="mb-0 h5 h2-sm">
-        <i class="bi bi-droplet"></i> Water Inventory
+      <h2 class="file-tab-heading">Mobile Inventory Form
       </h2>
 
     <div class="container mt-4">
@@ -176,7 +175,7 @@
                 </div>
 
                 <!-- Representative & Signature -->
-                <div class="col-6">
+                <div class="col-12">
                   <label for="modalRepresentative" class="form-label fw-bold small">Representative</label>
                   <input type="text" class="form-control form-control-lg" id="modalRepresentative" placeholder="Enter representative">
                 </div>
@@ -265,7 +264,7 @@
                 </div>
 
                 <!-- Latitude & Longitude -->
-                <div class="col-6">
+                <div class="col-12">
                   <label for="editLatitude" class="form-label fw-bold small">Latitude</label>
                   <input type="text" class="form-control form-control-lg" id="editLatitude" placeholder="Enter latitude">
                 </div>
