--- a/public/water-user.html
+++ b/public/water-user.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WRUS Information System</title>
+  <title>WRUS Portal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -16,8 +16,8 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-2" id="page-content">
-      <h2 class="mb-0 h5 h2-sm">
-        <i class="bi bi-droplet-half"></i> Water Users and Sources
+      <h2 class="file-tab-heading mb-2">
+        Water Users and Sources
       </h2>
       <div class="container mb-3">
         <div class="d-flex flex-column flex-lg-row align-items-stretch gap-2">
