--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -28,7 +28,7 @@
             <div class="col-12">
               <label for="citySelect" class="form-label">City</label>
               <select class="form-select" id="citySelect">
-                <option value="" selected disabled>Select a city</option>
+                <option value="" disabled selected>Select a city</option>
               </select>
             </div>
 
@@ -84,7 +84,7 @@
                 <!-- Year Conducted -->
                 <div class="col-12">
                   <label for="modalYearConducted" class="form-label fw-bold small">Year Conducted</label>
-                  <input type="number" class="form-control form-control-lg" id="modalYearConducted" disabled>
+                  <input type="number" class="form-control form-control-lg" id="modalYearConducted">
                 </div>
 
                 <!-- Owner -->
@@ -102,12 +102,12 @@
                 <!-- City & Barangay (side by side on larger screens) -->
                 <div class="col-6">
                   <label for="modalCity" class="form-label fw-bold small">City</label>
-                  <input type="text" class="form-control form-control-lg" id="modalCity" disabled>
+                  <input type="text" class="form-control form-control-lg" id="modalCity">
                 </div>
 
                 <div class="col-6">
                   <label for="modalBarangay" class="form-label fw-bold small">Barangay</label>
-                  <input type="text" class="form-control form-control-lg" id="modalBarangay" disabled>
+                  <input type="text" class="form-control form-control-lg" id="modalBarangay">
                 </div>
 
                 <!-- Source of Water -->
@@ -116,10 +116,10 @@
                   <!-- Select dropdown -->
                   <select class="form-select form-select-lg" id="modalSourceWaterSelect">
                     <option value="" selected disabled>Choose source...</option>
-                    <option value="Deepwell">Deepwell</option>
-                    <option value="Deepwell (Handpump)">Deepwell (Handpump)</option>
-                    <option value="Deepwell (Jetmatic)">Deepwell (Jetmatic)</option>
-                    <option value="Dug Well">Dug Well</option>
+                    <option value="Deepwell">Groundwater (Deepwell)</option>
+                    <option value="Deepwell (Handpump)">Groundwater (Deepwell - Handpump)</option>
+                    <option value="Deepwell (Jetmatic)">Groundwater (Deepwell - Jetmatic)</option>
+                    <option value="Dug Well">Groundwater (Dug Well)</option>
                     <option value="Spring">Spring</option>
                     <option value="River">River</option>
                     <option value="River">Stream / Creek</option>
@@ -220,7 +220,7 @@
                 <!-- Year Conducted -->
                 <div class="col-12">
                   <label for="editYearConducted" class="form-label fw-bold small">Year Conducted</label>
-                  <input type="number" class="form-control form-control-lg" id="editYearConducted" disabled>
+                  <input type="number" class="form-control form-control-lg" id="editYearConducted">
                 </div>
 
                 <!-- Owner -->
@@ -238,12 +238,12 @@
                 <!-- City & Barangay -->
                 <div class="col-6">
                   <label for="editCity" class="form-label fw-bold small">City</label>
-                  <input type="text" class="form-control form-control-lg" id="editCity" disabled>
+                  <input type="text" class="form-control form-control-lg" id="editCity">
                 </div>
 
                 <div class="col-6">
                   <label for="editBarangay" class="form-label fw-bold small">Barangay</label>
-                  <input type="text" class="form-control form-control-lg" id="editBarangay" disabled>
+                  <input type="text" class="form-control form-control-lg" id="editBarangay">
                 </div>
 
                 <!-- Source of Water -->
@@ -338,7 +338,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.5/dist/signature_pad.umd.min.js"></script>
   <script type="module" src="js/water-inventory/water-inventory-init.js"></script>
 </body>
 </html>
