--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -39,9 +39,18 @@
             </div>
 
             <!-- Year Conducted -->
-            <div class="col-12">
+            <div class="col-6">
               <label for="yearConducted" class="form-label">Year Conducted</label>
               <input type="number" class="form-control" id="yearConducted">
+            </div>
+
+            
+            <!-- Month Conducted -->
+            <div class="col-6">
+              <label for="monthConducted" class="form-label">Month Conducted</label>
+              <select class="form-select" id="monthConducted">
+              <!-- Options will be populated by JS -->
+              </select>
             </div>
           </div>
         </div>
@@ -82,9 +91,16 @@
               <div class="row gy-3">
 
                 <!-- Year Conducted -->
-                <div class="col-12">
+                <div class="col-6">
                   <label for="modalYearConducted" class="form-label fw-bold small">Year Conducted</label>
                   <input type="number" class="form-control form-control-lg" id="modalYearConducted">
+                </div>
+
+                <div class="col-6">
+                  <label for="monthConductedAddModal" class="form-label">Month Conducted</label>
+                  <select class="form-select fw-bold form-select-lg" id="monthConductedAddModal">
+                  <!-- Options will be populated by JS -->
+                  </select>
                 </div>
 
                 <!-- Owner -->
@@ -115,16 +131,6 @@
                   <label for="modalSourceWater" class="form-label fw-bold small">Source of Water</label>
                   <!-- Select dropdown -->
                   <select class="form-select form-select-lg" id="modalSourceWaterSelect">
-                    <option value="" selected disabled>Choose source...</option>
-                    <option value="Deepwell">Groundwater (Deepwell)</option>
-                    <option value="Deepwell (Handpump)">Groundwater (Deepwell - Handpump)</option>
-                    <option value="Deepwell (Jetmatic)">Groundwater (Deepwell - Jetmatic)</option>
-                    <option value="Dug Well">Groundwater (Dug Well)</option>
-                    <option value="Spring">Spring</option>
-                    <option value="River">River</option>
-                    <option value="River">Stream / Creek</option>
-                    <option value="Lake">Lake</option>
-                    <option value="Others">Others</option>
                   </select>
                 </div>
 
@@ -155,15 +161,6 @@
                   <div class="input-group">
                     <!-- Select dropdown -->
                     <select class="form-select form-select-lg" id="modalPurposeSelect">
-                      <option value="" selected disabled>Select purpose...</option>
-                      <option value="Household Use">Household</option>
-                      <option value="Community Use">Community</option>
-                      <option value="Municipal Use">Municipal</option>
-                      <option value="Industrial">Industrial</option>
-                      <option value="Commercial">Commercial</option>
-                      <option value="Irrigation">Irrigation</option>
-                      <option value="Recreation">Recreation</option>
-                      <option value="Others">Others</option>
                     </select>
                   </div>
                 </div>
@@ -218,9 +215,16 @@
               <div class="row gy-3">
                 <input type="hidden" id="editIndex">
                 <!-- Year Conducted -->
-                <div class="col-12">
+                <div class="col-6">
                   <label for="editYearConducted" class="form-label fw-bold small">Year Conducted</label>
                   <input type="number" class="form-control form-control-lg" id="editYearConducted">
+                </div>
+
+                <div class="col-6">
+                  <label for="monthConductedEditModal" class="form-label">Month Conducted</label>
+                  <select class="form-select fw-bold form-select-lg" id="monthConductedEditModal">
+                  <!-- Options will be populated by JS -->
+                  </select>
                 </div>
 
                 <!-- Owner -->
@@ -250,16 +254,6 @@
                 <div class="col-12">
                   <label for="editSourceWaterSelect" class="form-label fw-bold small">Source of Water</label>
                   <select class="form-select form-select-lg" id="editSourceWaterSelect">
-                    <option value="" selected disabled>Choose source...</option>
-                    <option value="Deepwell">Deepwell</option>
-                    <option value="Deepwell (Handpump)">Deepwell (Handpump)</option>
-                    <option value="Deepwell (Jetmatic)">Deepwell (Jetmatic)</option>
-                    <option value="Dug Well">Dug Well</option>
-                    <option value="Spring">Spring</option>
-                    <option value="River">River</option>
-                    <option value="Stream / Creek">Stream / Creek</option>
-                    <option value="Lake">Lake</option>
-                    <option value="Others">Others</option>
                   </select>
                 </div>
 
@@ -289,15 +283,6 @@
                   <label for="editPurposeSelect" class="form-label fw-bold small">Purpose</label>
                   <div class="input-group">
                     <select class="form-select form-select-lg" id="editPurposeSelect">
-                      <option value="" selected disabled>Select purpose...</option>
-                      <option value="Household Use">Household</option>
-                      <option value="Community Use">Community</option>
-                      <option value="Municipal Use">Municipal</option>
-                      <option value="Industrial">Industrial</option>
-                      <option value="Commercial">Commercial</option>
-                      <option value="Irrigation">Irrigation</option>
-                      <option value="Recreation">Recreation</option>
-                      <option value="Others">Others</option>
                     </select>
                   </div>
                 </div>
@@ -317,7 +302,7 @@
                 <div class="col-12">
                   <label for="editSignature" class="form-label fw-bold small">Signature</label>
                   <div class="border rounded bg-light" style="width: 100%; height: 150px;">
-                    <canvas id="editSignatureCanvas" style="width: 100%; height: 100%;"></canvas>
+                    <canvas id="editSignatureCanvas" width="600" height="150" style="width: 100%; height: 100%;"></canvas>
                   </div>
                   <button type="button" id="clearEditSignature" class="btn btn-sm btn-outline-secondary mt-2">Clear Signature</button>
                   <input type="hidden" id="editSignature" name="editSignature">
