added signature to supabase storage

--- a/public/water-user.html
+++ b/public/water-user.html
@@ -400,6 +400,12 @@
                       <input type="text" class="form-control" id="editRepresentative" name="editRepresentative" required>
                     </div>
                   </div>
+                  <div class="col-6">
+                    <img src="" alt="" id="image-signature">
+                    <label class="form-check-label" for="image-signature">
+                        Representative Signature
+                      </label>
+                  </div>
 
                   <!-- Is Water Source -->
                   <div class="col-6">
