--- a/public/water-inventory.html
+++ b/public/water-inventory.html
@@ -180,7 +180,7 @@
                 <div class="col-12 d-flex flex-column align-items-center">
                   <label for="modalSignature" class="form-label fw-bold small">Signature</label>
 
-                  <div class="border rounded bg-light" style="width: 600px; height: 100px;">
+                  <div class="border rounded bg-light" style="width: 350px; height: 100px;">
                     <canvas id="signatureCanvas" style="width: 100%; height: 100%;"></canvas>
                   </div>
 
@@ -305,9 +305,14 @@
                   <input type="text" class="form-control form-control-lg" id="editRepresentative" placeholder="Enter representative">
                 </div>
 
-                <div class="col-12 text-center">
-                  <img src="" alt="no signature" id="image-signature">
-                  <small class="text-muted d-block mt-1">Signature can't be edited</small>
+                <div class="col-12 d-flex flex-column align-items-center">
+                  <label class="form-label fw-bold small">Signature</label>
+
+                  <div class="border rounded bg-light" style="width: 350px; height: 100px;">
+                    <img src="" alt="no signature" id="image-signature" style="width: 100%; height: 100%; object-fit: contain;" />
+                  </div>
+
+                  <small class="text-muted mt-2">Signature can't be edited</small>
                 </div>
 
               </div>
