--- a/public/water-user.html
+++ b/public/water-user.html
@@ -476,12 +476,28 @@
         </div>
       </div>
 
+      <!-- PDF Viewer Modal -->
+      <div class="modal fade" id="pdfModal" tabindex="-1" aria-labelledby="pdfModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header bg-danger">
+              <h5 class="modal-title  text-white" id="pdfModalLabel">Site Verification Report</h5>
+              <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <iframe id="pdfViewer" src="" width="100%" height="600px" style="border: none;"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script type="module" src="js/wrus/wrus-init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/browser-image-compression@latest/dist/browser-image-compression.js"></script>
-      <div id="toast-container" class="toast-message"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
